--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-
+п»ї
   <html> 
 <head> 
 <meta charset="utf-8"> 
-<title>Настя Плотникова</title> 
+<title>РќР°СЃС‚СЏ РџР»РѕС‚РЅРёРєРѕРІР°</title> 
 </head> 
 <body> 
-<center><h1>"Где же моя черноглазая где, в Вологде-где-где-где, в Вологде где..."</h1></center> 
+<center><h1>"Р“РґРµ Р¶Рµ РјРѕСЏ С‡РµСЂРЅРѕРіР»Р°Р·Р°СЏ РіРґРµ, РІ Р’РѕР»РѕРіРґРµ-РіРґРµ-РіРґРµ-РіРґРµ, РІ Р’РѕР»РѕРіРґРµ РіРґРµ..."</h1></center> 
 <br> 
-<p><img width="22%" src="I.jpg" hspace=30% align="center"> 
-<big><big><i>Привет, я Настя :) Люблю шутки, смешные картинки, достойные фильмы; А еще я бегаю (утром за электричкой)</i></big></big></p> 
+<p><img width="22%" src="I.jpg" hspace=30%> 
+<big><big><i>РџСЂРёРІРµС‚, СЏ РќР°СЃС‚СЏ :) Р›СЋР±Р»СЋ С€СѓС‚РєРё, СЃРјРµС€РЅС‹Рµ РєР°СЂС‚РёРЅРєРё, РґРѕСЃС‚РѕР№РЅС‹Рµ С„РёР»СЊРјС‹; Рђ РµС‰Рµ СЏ Р±РµРіР°СЋ (СѓС‚СЂРѕРј Р·Р° СЌР»РµРєС‚СЂРёС‡РєРѕР№)</i></big></big></p> 
 <br> 
-<right><h2>Контакты:</h2></right> 
-Страничка: <a href="https://vk.com/id103002757">vkontakte</a> 
+<right><h2>РљРѕРЅС‚Р°РєС‚С‹:</h2></right> 
+РЎС‚СЂР°РЅРёС‡РєР°: <a href="https://vk.com/id103002757">vkontakte</a> 
 <br> 
 GitHub: <a href="https://github.com/NastyaPlotnikova123456">GitHub</a> 
 <br> 
 Instagram <a href="https://www.instagram.com/dymaipozitivno/">Instagram</a> 
 <br> 
-Телефон: <b>+79166163607</b> 
+РўРµР»РµС„РѕРЅ: <b>+79166163607</b> 
 <br> 
 E-mail: <i>volirinap71@mail.ru"</i></p> 
 </body> 
