--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ﻿
-  <html> 
+<html> 
 <head> 
 <meta charset="utf-8"> 
 <title>Настя Плотникова</title> 
+<link rel="shortcut icon" href="kek.ico" type="image/x-icon">
 </head> 
-<body> 
+<body style="background-color:#73d1b5"> 
 <center><h1>"Где же моя черноглазая где, в Вологде-где-где-где, в Вологде где..."</h1></center> 
 <br> 
-<p><img width="22%" src="I.jpg" hspace=30%> 
+<p><img width="22%" src="I.jpg" hspace=30%><img width="22%" src="photo1.jpg" hspace=30%> <img width="22%" src="photo2.jpg" hspace=30%>  
 <big><big><i>Привет, я Настя :) Люблю шутки, смешные картинки, достойные фильмы; А еще я бегаю (утром за электричкой)</i></big></big></p> 
 <br> 
 <right><h2>Контакты:</h2></right> 
