убрала фотографии, так как они не вписывались в формат страницы

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="background-color:#73d1b5"> 
 <center><h1>"Где же моя черноглазая где, в Вологде-где-где-где, в Вологде где..."</h1></center> 
 <br> 
-<p><img width="22%" src="I.jpg" hspace=20%><img width="22%" src="photo1.jpg" hspace=20%> <img width="22%" src="photo2.jpg" hspace=20%>  
+<p><img width="22%" src="I.jpg" hspace=20%> 
 <big><big><i>Привет, я Настя :) Люблю шутки, смешные картинки, достойные фильмы; А еще я бегаю (утром за электричкой)</i></big></big></p> 
 <br> 
 <right><h2>Контакты:</h2></right> 
